[package]
name = "ld_preload"
version = "0.1.2"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
description = "Easily use LD_PRELOAD in your Rust libraries."
repository = "https://github.com/Proximyst/ld_preload"
readme = "README.md"
keywords = ["ld_preload", "preload"]
license = "GPL-3.0-only"

[dependencies.libc]
version = "0.2"
default-features = false